大版本升级，集成Spring AI2.0 替换AgentScope